# Dinics-OpenMP

./: .gitignore  Brewfile.lock.json  CMakeLists.txt  LICENSE  README.md  bfspernode.cpp  bfspernode.hpp  dinics-gpu.cu  dinics-seq.cpp  dinics-seq.hpp  log.txt  main  main.cpp  mgraph.cpp  mgraph.hpp  out.txt  out2.txt  out3.txt  run.sh
.cache/clangd/index/: dinics-seq.cpp.999EC406779B2557.idx
a.out.dSYM/Contents/Resources/Relocations/aarch64/: a.out.yml
generator/: GraphGenerator.java
testInput/: test1.txt  test2.txt  test3.txt  test4.txt
